--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
     <![endif]-->
 </head>
 
-<body data-spy="scroll" data-target="#navbar">
+<body>
     <nav id="navbar" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -48,7 +48,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-hamburger">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#about">About</a></li>
+                    <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -288,6 +288,7 @@
     <!-- Bootstrap Material Design -->
     <script src="bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
     <script src="bower_components/bootstrap-material-design/dist/js/ripples.min.js"></script>
+    
     <script src="main.js"></script>
 </body>
 
